Add fire and forget examples and update specs for TourOptimizer